objects/kugo2p__KugamonInvoiceLine__c.object
<CustomObject>
    <description>Kugamon - Related object to Invoice for Invoice Product and Service Lines. Invoice Line records are created on Order release.</description>
    <fields>
        <fullName>kugo2p__AppliedPaymentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Applied Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__BalanceDueAmount__c</fullName>
        <formula>round(kugo2p__NetAmount__c - kugo2p__AppliedPaymentAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__CalculatedQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Calculated Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__CustomerPODate__c</fullName>
        <formula>BLANKVALUE(kugo2p__SalesOrderProductLine__r.kugo2p__CustomerPODate__c, kugo2p__SalesOrderServiceLine__r.kugo2p__CustomerPODate__c)</formula>
        <label>Customer PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__CustomerPOLine__c</fullName>
        <formula>BLANKVALUE(kugo2p__SalesOrderProductLine__r.kugo2p__CustomerPOLine__c, kugo2p__SalesOrderServiceLine__r.kugo2p__CustomerPOLine__c)</formula>
        <label>Customer PO Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__CustomerPONumber__c</fullName>
        <formula>BLANKVALUE(kugo2p__SalesOrderProductLine__r.kugo2p__CustomerPONumber__c, kugo2p__SalesOrderServiceLine__r.kugo2p__CustomerPONumber__c)</formula>
        <label>Customer PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__DiscountPercent2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__DiscountSalesPrice__c</fullName>
        <description>Effective Price is the Sales Price with Discounts Applied.</description>
        <formula>round(kugo2p__TotalAmount__c  /  kugo2p__Quantity__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Effective Price is the Sales Price with Discounts Applied</inlineHelpText>
        <label>Effective Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Invoice__c</fullName>
        <label>Invoice Number</label>
        <referenceTo>kugo2p__KugamonInvoice__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineAmount__c</fullName>
        <formula>IF(
  ISBLANK(kugo2p__ServiceDeliverySchedule__r.kugo2p__ServiceAmount__c),
  BLANKVALUE(kugo2p__CalculatedQuantity__c, kugo2p__Quantity__c) * kugo2p__SalesPrice__c,
  kugo2p__ServiceDeliverySchedule__r.kugo2p__ServiceAmount__c
)</formula>
        <label>Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineDescription__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__LineDiscountAmount__c</fullName>
        <formula>round(kugo2p__DiscountPercent2__c * kugo2p__LineAmount__c,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__Line__c</fullName>
        <formula>Right(&apos;00&apos; + TEXT(kugo2p__SortOrder__c), 3)&amp;&quot; &quot;&amp;HYPERLINK(&quot;/&quot; + Id,  &quot;Detail&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__NetAmount__c</fullName>
        <formula>round(kugo2p__TotalAmount__c  +  kugo2p__VATAmount__c  +  kugo2p__TaxAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductServiceName__c</fullName>
        <description>Product/Service Name used in the Order Line.</description>
        <formula>IF(ISBLANK(kugo2p__SalesOrderProductLine__c), 

IF(
ISBLANK(kugo2p__SalesOrderServiceLine__r.kugo2p__ServiceName__c),
kugo2p__ProductService__r.kugo2p__ReferenceProduct__r.Name,
kugo2p__SalesOrderServiceLine__r.kugo2p__ServiceName__c), 

IF(
ISBLANK(kugo2p__SalesOrderProductLine__r.kugo2p__ProductName__c),
kugo2p__ProductService__r.kugo2p__ReferenceProduct__r.Name,
kugo2p__SalesOrderProductLine__r.kugo2p__ProductName__c)

)</formula>
        <inlineHelpText>Product/Service Name used in the Order Line</inlineHelpText>
        <label>Product/Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ProductService__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product/Service</label>
        <referenceTo>kugo2p__AdditionalProductDetail__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__RecordStatus__c</fullName>
        <defaultValue>&quot;Unsent&quot;</defaultValue>
        <label>Record Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrderProductLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product Line</label>
        <referenceTo>kugo2p__SalesOrderProductLine__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrderServiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Service Line</label>
        <referenceTo>kugo2p__SalesOrderServiceLine__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number</label>
        <referenceTo>kugo2p__SalesOrder__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesPrice__c</fullName>
        <formula>BLANKVALUE(kugo2p__SalesOrderProductLine__r.kugo2p__SalesPrice__c, kugo2p__SalesOrderServiceLine__r.kugo2p__SalesPrice__c)</formula>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceDeliverySchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Delivery Schedule</label>
        <referenceTo>kugo2p__ServiceDeliverySchedule__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__ServiceTerm__c</fullName>
        <formula>kugo2p__SalesOrderServiceLine__r.kugo2p__ServiceTerm__c</formula>
        <label>Service Term</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipmentDate__c</fullName>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__ShipmentLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Line</label>
        <referenceTo>kugo2p__ShipmentLine__c</referenceTo>
        <relationshipLabel>Invoice Lines</relationshipLabel>
        <relationshipName>Invoice_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__Status__c</fullName>
        <formula>kugo2p__RecordStatus__c</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxAmount__c</fullName>
        <formula>round(kugo2p__TotalAmount__c * (kugo2p__TaxSalesRate__c + kugo2p__TaxExciseRate__c + kugo2p__TaxUsageRate__c ),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxExciseRate__c</fullName>
        <formula>BLANKVALUE(kugo2p__SalesOrderServiceLine__r.kugo2p__TaxExciseRate__c, kugo2p__SalesOrderProductLine__r.kugo2p__TaxExciseRate__c)</formula>
        <label>Tax Excise Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxSalesRate__c</fullName>
        <formula>BLANKVALUE(kugo2p__SalesOrderServiceLine__r.kugo2p__TaxSalesRate__c, kugo2p__SalesOrderProductLine__r.kugo2p__TaxSalesRate__c)</formula>
        <label>Tax Sales Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxUsageRate__c</fullName>
        <formula>BLANKVALUE(kugo2p__SalesOrderServiceLine__r.kugo2p__TaxUsageRate__c, kugo2p__SalesOrderProductLine__r.kugo2p__TaxUsageRate__c)</formula>
        <label>Tax Usage Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxVAT__c</fullName>
        <formula>BLANKVALUE( kugo2p__SalesOrderProductLine__r.kugo2p__TaxVAT__c ,  kugo2p__SalesOrderServiceLine__r.kugo2p__TaxVAT__c )</formula>
        <label>Tax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__TotalAmount__c</fullName>
        <formula>round(kugo2p__LineAmount__c - kugo2p__LineDiscountAmount__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__UnitofMeasure__c</fullName>
        <label>Unit of Measure</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__UnitofTerm__c</fullName>
        <label>Unit of Term</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__VATAmount__c</fullName>
        <formula>round(kugo2p__TotalAmount__c * kugo2p__VATRate__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT/GST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__VATRate__c</fullName>
        <formula>BLANKVALUE(kugo2p__SalesOrderProductLine__r.kugo2p__VATRate__c, kugo2p__SalesOrderServiceLine__r.kugo2p__VATRate__c)</formula>
        <label>VAT/GST Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <label>Invoice Line</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Invoice Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>